@@ -1,5 +1,5 @@
 ==== Changelog.txt ====
-@date: October 12, 2011
+@date: October 15, 2011
 
 === Version 1.4 ===
 * released ...
@@ -7,6 +7,7 @@
 
 == Code ==
 * Added textdomain as needed to string functions
+* Added previous and next post navigation in the `single.php` template
 * Removed `show_avatar` function - not used
 * Removed `bns_menu` function - not used
 * Removed `nona_get_page_number` function - no longer used
